[gd_scene load_steps=23 format=2]

[ext_resource path="res://Assets/courthouse_layer2.png" type="Texture" id=1]
[ext_resource path="res://Assets/courthouse_layer1.png" type="Texture" id=2]
[ext_resource path="res://Player.tscn" type="PackedScene" id=3]
[ext_resource path="res://Areas/Courthouse_V2/Courthouse2.gd" type="Script" id=4]
[ext_resource path="res://Areas/Courthouse_V2/docTable.gd" type="Script" id=5]
[ext_resource path="res://Assets/dogicapixelbold.ttf" type="DynamicFontData" id=6]
[ext_resource path="res://Areas/Courthouse_V2/docTableOpen.tscn" type="PackedScene" id=7]
[ext_resource path="res://Areas/Courthouse_V2/caseInfo.tscn" type="PackedScene" id=8]
[ext_resource path="res://Areas/Courthouse_V2/juryTable.gd" type="Script" id=9]
[ext_resource path="res://Areas/Courthouse_V2/juryTableOpen.tscn" type="PackedScene" id=10]
[ext_resource path="res://Areas/Courthouse_V2/AmendmentInfo.tscn" type="PackedScene" id=11]
[ext_resource path="res://Areas/Courthouse_V2/Verdict.tscn" type="PackedScene" id=12]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 6.88966, 20.5833 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 27.5586, 4.58333 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 18.0957, 11 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 0.839846, 99.8333 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 169.502, 1.16666 )

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 169.502, 5.75 )

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 83.5, 10 )

[sub_resource type="DynamicFont" id=8]
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 6 )

[sub_resource type="RectangleShape2D" id=9]
extents = Vector2( 54.5, 9 )

[sub_resource type="DynamicFont" id=10]
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 6 )

[node name="Courthouse" type="Node2D"]
position = Vector2( -1, -2 )
script = ExtResource( 4 )

[node name="bg" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="Interactables" type="Sprite" parent="."]
texture = ExtResource( 2 )

[node name="collisions" type="StaticBody2D" parent="Interactables"]
position = Vector2( 513, 302 )
scale = Vector2( 3.01176, 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Interactables/collisions"]
position = Vector2( -220.054, -97.4167 )
shape = SubResource( 1 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Interactables/collisions"]
position = Vector2( -181.289, -72.0833 )
shape = SubResource( 2 )

[node name="CollisionShape2D3" type="CollisionShape2D" parent="Interactables/collisions"]
position = Vector2( -181.123, -124.333 )
shape = SubResource( 3 )

[node name="CollisionShape2D4" type="CollisionShape2D" parent="Interactables/collisions"]
position = Vector2( -227.773, -162.333 )
shape = SubResource( 4 )

[node name="CollisionShape2D5" type="CollisionShape2D" parent="Interactables/collisions"]
position = Vector2( -113.223, -159 )
shape = SubResource( 4 )

[node name="CollisionShape2D6" type="CollisionShape2D" parent="Interactables/collisions"]
position = Vector2( -161.367, -66.3333 )
shape = SubResource( 5 )

[node name="CollisionShape2D7" type="CollisionShape2D" parent="Interactables/collisions"]
position = Vector2( -191.582, -129.417 )
shape = SubResource( 6 )

[node name="Player" parent="." instance=ExtResource( 3 )]
position = Vector2( 141, 30 )

[node name="docTable" type="Area2D" parent="."]
script = ExtResource( 5 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="docTable"]
position = Vector2( -33.5, 74 )
shape = SubResource( 7 )

[node name="Label" type="Label" parent="docTable"]
margin_left = -52.0
margin_top = 76.0
margin_right = -12.0
margin_bottom = 90.0
custom_fonts/font = SubResource( 8 )
align = 1
valign = 1

[node name="docTableOpen" parent="." instance=ExtResource( 7 )]

[node name="caseInfo" parent="." instance=ExtResource( 8 )]

[node name="juryTableOpen" parent="." instance=ExtResource( 10 )]

[node name="AmendmentInfo" parent="." instance=ExtResource( 11 )]

[node name="juryTable" type="Area2D" parent="."]
script = ExtResource( 9 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="juryTable"]
position = Vector2( -32.5, -41 )
shape = SubResource( 9 )

[node name="Label" type="Label" parent="juryTable"]
margin_left = -41.0
margin_top = -67.0
margin_right = -1.0
margin_bottom = -51.0
custom_fonts/font = SubResource( 10 )
text = "E"

[node name="Verdict" parent="." instance=ExtResource( 12 )]

[connection signal="body_entered" from="docTable" to="docTable" method="_on_docTable_body_entered"]
[connection signal="body_exited" from="docTable" to="docTable" method="_on_docTable_body_exited"]
[connection signal="body_entered" from="juryTable" to="juryTable" method="_on_juryTable_body_entered"]
[connection signal="body_exited" from="juryTable" to="juryTable" method="_on_juryTable_body_exited"]
